--- a/src/Blog/laravel-api-models.mdx
+++ b/src/Blog/laravel-api-models.mdx
@@ -7,7 +7,7 @@ Always follow best pratices and you're ok when create some relationships
 
 Imagine you want to Create Questions & Answers Database:
 
-You will need to create a ``Question`` model and ``Ànswer`` model and must have an relationship between both tables:
+You will need to create a ``Question`` model and ``Answer`` model and must have an relationship between both tables:
 Something like **Question-> hasMany-> Answer** (Inside Question model there's a answers function to have this relation)
 
 Imagine Question Model:
