Fix 2nd post data

--- a/src/Blog/laravel-api-models.mdx
+++ b/src/Blog/laravel-api-models.mdx
@@ -39,3 +39,7 @@ When you need to retrieve from your DB your questions with answers, you can use 
 ``` Question::with('answers')->all(); ```
 
 🤩🤩🤩
+
+More tips on next post!
+
+Alexandre Abreu, 8/Dec 2019
