--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -1,5 +1,12 @@
 {
     "translations" : {
-        "introInitial" : "Welcome"
+        "en" : "Anglais",
+        "fr" : "Français",
+        "pt" : "Portugais",
+
+        "introInitial" : "Salut, mon nom est ",
+        "introEnd" : " et naviguez pour découvrir plus de moi",
+        "introMore" : "Je suis développeur de logiciels avec {num} ans de l'île de Madère, au Portugal",
+        "introSentence" : "Knowledge is power. – Francis Bacon"
     }
 }
