--- a/src/locales/pt/pt.json
+++ b/src/locales/pt/pt.json
@@ -1,5 +1,12 @@
 {
     "translations" : {
-        "introInitial" : "Welcome"
+        "en" : "Ingês",
+        "fr" : "Françês",
+        "pt" : "Português",
+
+        "introInitial" : "Olá, meu nome é ",
+        "introEnd" : " e navega para saber mais sobre mim",
+        "introMore" : "Eu sou um software developer com {num} anos da ilha da Madeira Portugal",
+        "introSentence" : "Knowledge is power. – Francis Bacon"
     }
 }
