--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -1,5 +1,12 @@
 {
     "translations" : {
-        "introInitial" : "Welcome"
+        "en" : "English",
+        "fr" : "French",
+        "pt" : "Portuguese",
+        
+        "introInitial" : "Hello, my name is ",
+        "introEnd" : " and navigate to discover more from me",
+        "introMore" : "I'm a software developer with {num} years-old from Madeira Island, Portugal",
+        "introSentence" : "Knowledge is power. – Francis Bacon"
     }
 }
