Add dynamic variable to i18 translations

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -3,10 +3,10 @@
         "en" : "English",
         "fr" : "French",
         "pt" : "Portuguese",
-        
+
         "introInitial" : "Hello, my name is ",
         "introEnd" : " and navigate to discover more from me",
-        "introMore" : "I'm a software developer with {num} years-old from Madeira Island, Portugal",
+        "introMore" : "I'm a software developer with {{age}} years-old from Madeira Island, Portugal",
         "introSentence" : "Knowledge is power. – Francis Bacon"
     }
 }
