Add adjustments to nav
Add missing trans

Fix index page

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -7,6 +7,13 @@
         "introInitial" : "Hello, my name is ",
         "introEnd" : " and navigate to discover more from me",
         "introMore" : "I'm a software developer with {{age}} years-old from Madeira Island, Portugal",
-        "introSentence" : "Knowledge is power. – Francis Bacon"
+        "introSentence" : "Knowledge is power. – Francis Bacon",
+
+        "socialLabel" : "Find me on:", 
+        "contactLabel" : "Contact:",
+        "contactName" : "Name",
+        "contactEmail" : "Email",
+        "contactMessage" : "Message",
+        "contactSend" : "Send"
     }
 }
