--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -7,6 +7,14 @@
         "introInitial" : "Salut, mon nom est ",
         "introEnd" : " et naviguez pour découvrir plus de moi",
         "introMore" : "Je suis développeur de logiciels avec {{age}} ans de l'île de Madère, au Portugal",
-        "introSentence" : "Knowledge is power. – Francis Bacon"
+        "introSentence" : "Knowledge is power. – Francis Bacon",
+
+        "socialLabel" : "Retrouvez moi sur:",
+        "contactLabel" : "Contactez nous:", 
+        "contactName" : "Nom",
+        "contactEmail" : "Courrier",
+        "contactMessage" : "Message",
+        "contactSend" : "Envoyer"
+
     }
 }
