--- a/src/locales/pt/pt.json
+++ b/src/locales/pt/pt.json
@@ -7,6 +7,14 @@
         "introInitial" : "Olá, meu nome é ",
         "introEnd" : " e navega para saber mais sobre mim",
         "introMore" : "Eu sou um software developer com {{age}} anos da ilha da Madeira Portugal",
-        "introSentence" : "Knowledge is power. – Francis Bacon"
+        "introSentence" : "Knowledge is power. – Francis Bacon",
+
+        "socialLabel" : "Encontra-me em:",
+        "contactLabel" : "Contacte:",
+        "contactName" : "Nome",
+        "contactEmail" : "E-mail",
+        "contactMessage" : "Mensagem",
+        "contactSend" : "Enviar"
+
     }
 }
