Added social links
Added missing nav header menu translations

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -14,6 +14,14 @@
         "contactName" : "Name",
         "contactEmail" : "Email",
         "contactMessage" : "Message",
-        "contactSend" : "Send"
+        "contactSend" : "Send",
+
+        "menuHome" : "Home",
+        "menuBlog" : "Blog",
+        "menuProjects" : "Projects",
+        "menuAboutMe" : "About me",
+        "menuContact" : "Contact"
+
+
     }
 }
