--- a/src/locales/pt/pt.json
+++ b/src/locales/pt/pt.json
@@ -19,6 +19,7 @@
         "menuHome" : "Início",
         "menuBlog" : "Blog",
         "menuProjects" : "Projetos",
+        "menuResume": "Resumo",
         "menuAboutMe" : "Sobre mim",
         "menuContact" : "Contacto",
 
