--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -19,13 +19,29 @@
         "menuHome" : "Accueil",
         "menuBlog" : "Blog",
         "menuProjects" : "Projets",
+        "menuResume": "Resumé",
         "menuAboutMe" : "À propos de moi",
         "menuContact" : "Contact",
 
         "aboutMeInfo" : "Il y a beaucoup de choses dont je peux parler mais, fondamentalement, je suis un codeur portugais de 29 ans qui aime vraiment ce travail.J'ai toujours été curieux de découvrir de nouvelles choses dans ce domaine, de commencer à interagir avec les ordinateurs depuis mes 7 à 8 ans. quand mes parents ont acheté notre premier ordinateur personnel. Au collège, j'ai décidé d'aller à un cours technique au lieu d'un domaine normal / commun, et d'aller à l'université pour obtenir un diplôme en informatique. Terminé mon CS @ 2014 et depuis 2016 je travaille sur le développement logiciel, je suis actuellement en deuxième entreprise depuis l'université. J'ai travaillé sur des projets VOD (vidéo à la demande), des services bancaires par Internet et des projets d'actualités",
 
         "notFound" : "Pas trouvé",
-        "backHome" : "Arrivez accueil"
+        "backHome" : "Arrivez accueil",
+
+        "resume-first-title" : "Nearsoft Solutions - Fullstack developer",
+        "resume-first-subtitle" : "Funchal, Madeira / Portugal",
+        "resume-first-text" : "A commencé dans cette entreprise en tant que consultant pour la société irlandaise de boissons OrbisMES, en utilisant MSQL, en examinant les procédures T-SQL / stockées et en analysant tous les flux de bière pour l'entreprise. Travaillant actuellement avec la pile Laravel en utilisant MySQL, les API RESTFul rendent les frontaux avec vanilla js en utilisant SCSS avec le framework Bootstrap. Nous utilisons le docker quotidien pour emballer tous les projets avec le système de contrôle de version git et utilisons des services AWS comme ECR pour stocker toutes les images docker, servir des actifs avec S3 et stocker des données avec RDS principalement MySQL. Travailler avec des pipelines CI / CD connectés à notre compte gitlab et quelques règles strictes (*) sur les tests unitaires / les linters de code. Développeur autonome gérant de petits projets faisant de la méthode Agile sur tous les projets travaillés.",
+        "resume-first-note" : "Par des règles strictes, toute demande de fusion peut UNIQUEMENT être approuvée si elle réussit un pourcentage de couverture de test sur les tests unitaires",
+        "resume-first-tech-summary": [ "PHP",  "JavaScript", "CSS", "Bootstrap", "SCSS", "HTML", "Docker", "Git", "AWS", "CLI"],
+
+        "resume-second-title" : "TV App Agency - Backend Developer",
+        "resume-second-subtitle" : "Funchal, Madeira / Portugal",
+        "resume-second-text" : "Développement d'apis pour servir du contenu pour des applications VOD telles que blockbuster / systèmes similaires à netflix, création de backoffices d'administration pour contrôler le contenu (en profitant de Bootstrap pour accélérer la visualisation des panneaux). Configurez certaines tâches cron pour ingérer automatiquement du contenu sur le backend à introduire dans les bases de données MySQL, avec Laravel Schedule et l'utilisation de l'ORM Eloquent de Laravel pour manipuler les données de la base de données et les transformer en réponses API, en utilisant Postman pour pouvoir tester ces services .",
+        "resume-second-tech-summary": [ "RESTful", "PHP", "jQuery", "CSS", "HTML", "SVN", "Laravel Scheduler /cronjobs"],
+
+        "resume-third-title" : "Freelancer",
+        "resume-third-subtitle" : "Funchal, Madeira / Portugal",
+        "resume-third-text" : "Il a été proposé de développer une plate-forme publicitaire basée sur wordpress, dans laquelle il serait nécessaire de créer des fonctions PHP pour certaines actions sur la plate-forme, et en suivant les directives du concepteur qui a conçu des maquettes pour la plate-forme. Un système d'abonnement a également été créé pour cela, ce qui donnerait plus de visibilité aux annonces envoyées par les utilisateurs payants de la plateforme. Avec cette expérience j'ai acquis une autonomie pour pouvoir estimer / réaliser des travaux en dehors de l'environnement scolaire / universitaire et pour pouvoir avoir une approche plus réelle des difficultés de la zone, traitant les problèmes qu'un système traite lorsqu'il interagit. l'utilisateur final."
 
     }
 }
