Add CV menu option

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -21,6 +21,7 @@
         "menuProjects" : "Projects",
         "menuAboutMe" : "About me",
         "menuResume": "Resume",
+        "menuCV": "CV",
         "menuContact" : "Contact",
 
         "aboutMeInfo" : "There are many things I can say, but basically I am a Portuguese programmer in more detail from the fantastic island of Madeira, I was born in 1990 and I am passionate about programming. Sometimes I get home and spend time trying to create new personal projects to try out new technologies, tools or languages. I started this interest in computers from 7-8 years old when my parents bought our first personal computer. In secondary school, I decided to take the technical computer course instead of a general area, and when I went to university I chose Computer Engineering. I finished my degree in Computer Science in 2014 and since 2016 I am working on software development, currently I am in the second company since the university. I've worked in several areas such as multimedia content platforms (films, series), beverage production (MES), banking and content platforms, this gave me some experience in backend and also frontend",
