--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -20,6 +20,7 @@
         "menuBlog" : "Blog",
         "menuProjects" : "Projets",
         "menuResume": "Resumé",
+        "menuCV": "CV",
         "menuAboutMe" : "À propos de moi",
         "menuContact" : "Contact",
 
