--- a/src/locales/pt/pt.json
+++ b/src/locales/pt/pt.json
@@ -20,6 +20,7 @@
         "menuBlog" : "Blog",
         "menuProjects" : "Projetos",
         "menuResume": "Resumo",
+        "menuCV": "CV",
         "menuAboutMe" : "Sobre mim",
         "menuContact" : "Contacto",
 
