fix: update ui from welcome page

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -1,56 +1,75 @@
 {
-    "translations" : {
-        "en" : "English",
-        "fr" : "French",
-        "pt" : "Portuguese",
+  "translations": {
+    "en": "English",
+    "fr": "French",
+    "pt": "Portuguese",
 
-        "introInitial" : "Hello, my name is ",
-        "introEnd" : " and feel free to navigate to discover a bit more from me",
-        "introMore" : "I'm a software developer with {{age}} years-old from Madeira Island, Portugal",
-        "introSentence" : "Knowledge is power. – Francis Bacon",
+    "introInitial": "Hello, my name is ",
+    "introEnd": " and feel free to discover more about me",
+    "introMore": "I'm a software developer with {{age}} years-old from Madeira Island, Portugal",
+    "introSentence": "Knowledge is power. – Francis Bacon",
 
-        "socialLabel" : "Find me on:", 
-        "contactLabel" : "Contact:",
-        "contactName" : "Name",
-        "contactEmail" : "Email",
-        "contactMessage" : "Message",
-        "contactSend" : "Send",
+    "socialLabel": "Find me on:",
+    "contactLabel": "Contact:",
+    "contactName": "Name",
+    "contactEmail": "Email",
+    "contactMessage": "Message",
+    "contactSend": "Send",
 
-        "menuHome" : "Home",
-        "menuBlog" : "Blog",
-        "menuProjects" : "Projects",
-        "menuAboutMe" : "About me",
-        "menuResume": "Resume",
-        "menuCV": "CV",
-        "menuContact" : "Contact",
+    "menuHome": "Home",
+    "menuBlog": "Blog",
+    "menuProjects": "Projects",
+    "menuAboutMe": "About me",
+    "menuResume": "Resume",
+    "menuCV": "CV",
+    "menuContact": "Contact",
 
-        "aboutMeInfo" : "There are many things I can say, but basically I am a Portuguese programmer in more detail from the fantastic island of Madeira, I was born in 1990 and I am passionate about programming. Sometimes I get home and spend time trying to create new personal projects to try out new technologies, tools or languages. I started this interest in computers from 7-8 years old when my parents bought our first personal computer. In secondary school, I decided to take the technical computer course instead of a general area, and when I went to university I chose Computer Engineering. I finished my degree in Computer Science in 2014 and since 2016 I am working on software development, currently I am in the second company since the university. I've worked in several areas such as multimedia content platforms (films, series), beverage production (MES), banking and content platforms, this gave me some experience in backend and also frontend",
+    "aboutMeInfo": "There are many things I can say, but basically I am a Portuguese programmer in more detail from the fantastic island of Madeira, I was born in 1990 and I am passionate about programming. Sometimes I get home and spend time trying to create new personal projects to try out new technologies, tools or languages. I started this interest in computers from 7-8 years old when my parents bought our first personal computer. In secondary school, I decided to take the technical computer course instead of a general area, and when I went to university I chose Computer Engineering. I finished my degree in Computer Science in 2014 and since 2016 I am working on software development, currently I am in the second company since the university. I've worked in several areas such as multimedia content platforms (films, series), beverage production (MES), banking and content platforms, this gave me some experience in backend and also frontend",
 
-        "notFound" : "Not Found",
-        "backHome" : "Back Home",
+    "notFound": "Not Found",
+    "backHome": "Back Home",
 
-        "resume-first-title" : "Nearsoft Solutions - Fullstack developer",
-        "resume-first-subtitle" : "Funchal, Madeira / Portugal",
-        "resume-first-text" : "Started at this company as consultant for Irish beverage company OrbisMES, using MSQL , reviewing T-SQL/ stored procedures and analysis all beer flow for company. Currently working with Laravel stack using MySQL, RESTFul APIs rendering front ends with vanilla js using SCSS with Bootstrap framework. We use daily docker for pack all projects with git version control system and use AWS services like ECR to store all docker images, serve assets with S3 and store data with RDS mainly MySQL. Working with CI/CD pipelines connected to our gitlab account & some strict rules(*) about Unit testing / code linters. Autonomous developer managing small projects doing Agile methodoly across all projects worked.",
-        "resume-first-note" : "By strict rules means any merge request can ONLY be aproved if passes some % of test coverage on Unit tests",
-        "resume-first-tech-summary": [ "PHP",  "JavaScript", "CSS", "Bootstrap", "SCSS", "HTML", "Docker", "Git", "AWS", "CLI"],
+    "resume-first-title": "Nearsoft Solutions - Fullstack developer",
+    "resume-first-subtitle": "Funchal, Madeira / Portugal",
+    "resume-first-text": "Started at this company as consultant for Irish beverage company OrbisMES, using MSQL , reviewing T-SQL/ stored procedures and analysis all beer flow for company. Currently working with Laravel stack using MySQL, RESTFul APIs rendering front ends with vanilla js using SCSS with Bootstrap framework. We use daily docker for pack all projects with git version control system and use AWS services like ECR to store all docker images, serve assets with S3 and store data with RDS mainly MySQL. Working with CI/CD pipelines connected to our gitlab account & some strict rules(*) about Unit testing / code linters. Autonomous developer managing small projects doing Agile methodoly across all projects worked.",
+    "resume-first-note": "By strict rules means any merge request can ONLY be aproved if passes some % of test coverage on Unit tests",
+    "resume-first-tech-summary": [
+      "PHP",
+      "JavaScript",
+      "CSS",
+      "Bootstrap",
+      "SCSS",
+      "HTML",
+      "Docker",
+      "Git",
+      "AWS",
+      "CLI"
+    ],
 
-        "resume-second-title" : "TV App Agency - Backend Developer",
-        "resume-second-subtitle" : "Funchal, Madeira / Portugal",
-        "resume-second-text" : "Development of apis to serve content for VOD applications such as blockbuster / systems similar to netflix, creation of administration backoffices to control the content (taking advantage of Bootstrap to speed up the visualization of the panels). Configure some cronjobs to automatically ingest content on the backend to be introduced in the MySQL databases, with Laravel Schedule and use of the Eloquent ORM of Laravel to manipulate data from the database and transform them into API responses, using Postman to be able test these services.",
-        "resume-second-tech-summary": [ "RESTful", "PHP", "jQuery", "CSS", "HTML", "SVN", "Laravel Scheduler /cronjobs"],
+    "resume-second-title": "TV App Agency - Backend Developer",
+    "resume-second-subtitle": "Funchal, Madeira / Portugal",
+    "resume-second-text": "Development of apis to serve content for VOD applications such as blockbuster / systems similar to netflix, creation of administration backoffices to control the content (taking advantage of Bootstrap to speed up the visualization of the panels). Configure some cronjobs to automatically ingest content on the backend to be introduced in the MySQL databases, with Laravel Schedule and use of the Eloquent ORM of Laravel to manipulate data from the database and transform them into API responses, using Postman to be able test these services.",
+    "resume-second-tech-summary": [
+      "RESTful",
+      "PHP",
+      "jQuery",
+      "CSS",
+      "HTML",
+      "SVN",
+      "Laravel Scheduler /cronjobs"
+    ],
 
-        "resume-third-title" : "Studend/Freelancer",
-        "resume-third-subtitle" : "Funchal, Madeira / Portugal",
-        "resume-third-text" : "Meanwhile i was at university,some friend proposed me to develop an advertising platform based on wordpress, in which it would be necessary to create some PHP functions for some actions on the platform, and following the guidelines of the designer who designed some mockups for the platform. A subscription system was also created for it, which would give more prominence to the ads sent by paying users of the platform. With this experience I gained autonomy to be able to estimate / carry out work outside the school / university environment and to be able to have a more real approach to the difficulties of the area, dealing with the problems that a system deals with when interacting with the end user.",
+    "resume-third-title": "Studend/Freelancer",
+    "resume-third-subtitle": "Funchal, Madeira / Portugal",
+    "resume-third-text": "Meanwhile i was at university,some friend proposed me to develop an advertising platform based on wordpress, in which it would be necessary to create some PHP functions for some actions on the platform, and following the guidelines of the designer who designed some mockups for the platform. A subscription system was also created for it, which would give more prominence to the ads sent by paying users of the platform. With this experience I gained autonomy to be able to estimate / carry out work outside the school / university environment and to be able to have a more real approach to the difficulties of the area, dealing with the problems that a system deals with when interacting with the end user.",
 
-        "cv-page": "Page",
-        "cv-of": "of",
-        "cv-previous": "Previous",
-        "cv-next": "Next",
-        "cv-download-cv": "Download CV",
-        "cv-select-option": "Select an option",
-        "cv-resume": "Summary",
-        "cv-complete": "Cv complete"
-    }
+    "cv-page": "Page",
+    "cv-of": "of",
+    "cv-previous": "Previous",
+    "cv-next": "Next",
+    "cv-download-cv": "Download CV",
+    "cv-select-option": "Select an option",
+    "cv-resume": "Summary",
+    "cv-complete": "Cv complete"
+  }
 }
