--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -15,6 +15,8 @@
     "contactEmail": "Email",
     "contactMessage": "Message",
     "contactSend": "Send",
+    "contactWithSuccess": "Email sent with success",
+    "contactWithError": "Whoops! Email was not sent. Please try again later",
 
     "menuHome": "Home",
     "menuBlog": "Blog",
@@ -29,9 +31,15 @@
     "notFound": "Not Found",
     "backHome": "Back Home",
 
+    "resume-newest-title" : "Yacooba - Fullstack developer",
+    "resume-newest-subtitle" : "Remote",
+    "resume-newest-text" : "Due to the fascination of the blockchain world, I ended up wanting to change careers, I felt that I needed to push my path and get new challenges. visual (Atomic Design) with React components, accompanied by unit tests and Storybook to validate the implementation of the same component. The pages of each of the microfrontends we have in our NextJS project are served statically at build time.(SSG). I'm developing the company's backend solution with a domain driven development approach, in which I conclude that when transposing the business logic, it makes it more difficult for errors to occur in the backend, I currently use nodeJS with typescript. I'm developing the company's backend solution with a domain driven development approach, in which I conclude that when transposing the business logic, it makes it more difficult for errors to occur in the backend, I currently use nodeJS with typescript. I had contact with smart contracts (solidity) using openzeppelin standards with the help of hardhat and lib ethers.js and web3.js launching a contract made in ERC721 on the Ethereum network",
+    "resume-newest-note" : "",
+    "resume-newest-tech-summary": ["TypeScript", "NextJS", "MaterialUI", "Storybook", "Git", "NodeJS", "DDD", "Postgres", "GraphQL", "ethers", "web3", "Hardhat", "Solidity", "Blockchain"],
+
     "resume-first-title": "Nearsoft Solutions - Fullstack developer",
     "resume-first-subtitle": "Funchal, Madeira / Portugal",
-    "resume-first-text": "Started at this company as consultant for Irish beverage company OrbisMES, using MSQL , reviewing T-SQL/ stored procedures and analysis all beer flow for company. Currently working with Laravel stack using MySQL, RESTFul APIs rendering front ends with vanilla js using SCSS with Bootstrap framework. We use daily docker for pack all projects with git version control system and use AWS services like ECR to store all docker images, serve assets with S3 and store data with RDS mainly MySQL. Working with CI/CD pipelines connected to our gitlab account & some strict rules(*) about Unit testing / code linters. Autonomous developer managing small projects doing Agile methodoly across all projects worked.",
+    "resume-first-text": "Started at this company as consultant for Irish beverage company OrbisMES, using MSQL , reviewing T-SQL/ stored procedures and analysis all beer flow for company. Currently working with Laravel stack using MySQL, RESTFul APIs rendering front ends with vanilla js using SCSS with Bootstrap framework. We use daily docker for pack all projects with git version control system and use AWS services like ECR to store all docker images, serve assets with S3 and store data with RDS mainly MySQL. Working with CI/CD pipelines connected to our gitlab account & some strict rules(*) about Unit testing / code linters. I had the privilege of training (onsite) and accompanying (remotely) a work team in Macedonia made up of 3 people.",
     "resume-first-note": "By strict rules means any merge request can ONLY be aproved if passes some % of test coverage on Unit tests",
     "resume-first-tech-summary": [
       "PHP",
@@ -70,6 +78,6 @@
     "cv-download-cv": "Download CV",
     "cv-select-option": "Select an option",
     "cv-resume": "Summary",
-    "cv-complete": "Cv complete"
+    "cv-complete": "Extended"
   }
 }
